tests/invalid_typecheck/test_tc_assign_int_to_bool_array.aphi
bool[2] flags;
int idx;

procedure main {
    idx = 0;
    flags[idx] = 5;
}
